# duan

./: .gitignore  CHANGELOG.md  DuanLangLexer.interp  DuanLangLexer.py  DuanLangLexer.tokens  FIX_GUIDE.md  LICENSE  README.md  _debug_phase1.py  _debug_phase4.py  _test_antlr.py  _test_diag.py  _test_hm_inference.py  _test_null_safety.py  _test_package_system.py  _test_phase1.py  _test_phase2.py  _test_phase3.py  _test_phase5.py  _test_three_features.py  compile.py  compile_src.py  debug_and_expr.py  debug_import.py  debug_method.py  debug_parse.py  debug_parse2.py  debug_parse3.py  debug_parser.py  debug_return.py  debug_tree.py  debug_typed_rules.py  debug_visit_expr.py  debug_visitor.py  duan_compile.py  generate_parser.py  mkdocs.yml  pyproject.toml  quick_resolver_test.py  quick_test.py  (+56 more)
antlrparser/: DuanLang.g4  DuanLang.interp  DuanLang.tokens  DuanLangLexer.g4  DuanLangLexer.interp  DuanLangLexer.py  DuanLangLexer.tokens  DuanLangParser.g4  DuanLangParser.g4.backup  DuanLangParser.interp  DuanLangParser.py  DuanLangParser.tokens  DuanLangParserListener.py  DuanLangParserVisitor.py  DuanLangVisitor.py  README.md  __init__.py  _test_async.py  _test_basic.py  _test_regex.py  _test_repl.py  _test_stdlib.py  cli.py  compile_runtime.py  demo.ll  duan_ast.py  duan_builtins.py  duan_bytecode.py  duan_cli.py  duan_compiler.py  duan_error_handler.py  duan_interpreter.py  duan_llvm.py  duan_module.py  duan_repl.py  duan_tokenizer.py  duan_visitor.py  interpreter_core.py  llvm_codegen.py  llvm_core.py  (+32 more)
antlrparser/duan_parser/: DuanLang.interp  DuanLang.tokens  DuanLangLexer.interp  DuanLangLexer.py  DuanLangLexer.tokens  DuanLangListener.py  DuanLangParser.interp  DuanLangParser.py  DuanLangParser.tokens  DuanLangParserListener.py  DuanLangParserVisitor.py  DuanLangVisitor.py
antlrparser/duan_parser/antlrparser/: DuanLangParserListener.py  DuanLangParserVisitor.py
antlrparser/duan_parser2/: DuanLangLexer.interp  DuanLangParser.interp  DuanLangParser.py
antlrparser/duan_parser_new/: DuanLangParserVisitor.py
antlrparser/modules/: data_models.duan  math_utils.duan  string_utils.duan
antlrparser/runtime/: compile.bat  duan_runtime.c
antlrparser/scripts/: build.ps1  generate.ps1
antlrparser/self_hosted/: ast.duan  bootstrap_test.duan  check_combined.py  check_tokenizer.py  debug_parse.py  interpreter.duan  llvm_codegen.duan  parser.duan  run_bootstrap_test.py  simple_test.duan  stdlib.duan  test_basic.py  test_bootstrap.duan  test_comprehensive.py  test_duan_interpreter.py  test_enhancements.py  test_enhancements_simple.py  test_final.py  test_full_bootstrap.py  test_integration.py  test_interpreter.py  test_parser.py  test_python_interpreter.py  test_stdlib.py  test_summary.py  test_syntax.duan  test_tokenizer.py  tokenizer.duan
antlrparser/test/: mod_advanced.duan  mod_greet.duan  mod_math.duan  mod_util.duan  sample_basic.duan  sample_controlflow.duan  sample_quicksort.duan  sample_types.duan  test_antlr_comprehensive.duan  test_antlr_comprehensive.py  test_antlr_validation.py  test_compile.py  test_controlflow.py  test_debug.py  test_debug_eval.py  test_debug_expr.py  test_dict.py  test_dual_backend.py  test_final_antlr.duan  test_final_antlr.py  test_interface_parse.py  test_interpreter.py  test_list_dict.py  test_module.py  test_oop_comprehensive.py  test_oop_features.py  test_parse_tree.py  test_parser.py  test_parser_debug.py  test_src_features.py  test_tokenizer2.py  test_tokenizer_new.py  test_types.py
antlrparser/web_playground/: _test_examples.py  server.py  test_api.py
antlrparser/web_playground/shared/: 570daf3b-1781086025.json  570daf3b-1781094160.json  eb8c0d71-1781100584.json
antlrparser/web_playground/static/: app.js  index.html  style.css
archived/: INTEGRATION_STATUS.md  PROGRESS.md  PROGRESS_2026-06-13.md  README.md  check_ast.py  check_parser.py  debug_parse.py  duan_parser_v3_debug.py  merge_and_run.py
benchmarks/: run_benchmarks.py  run_enhanced_benchmarks.py
bootstrap/: _debug_ast.py  ast_nodes_v2.py  bootstrap_level3.duan  bootstrap_level5.duan  bootstrap_merged.duan  codegen.duan  codegen_test.duan  codegen_test.py  compile_lexer.py  compiler.duan  duan_ast.duan  duan_ast_out.py  level3_generated.py  level3_self_compiled.py  level3_self_compiled2.py  level4_generated.py  level5_bootstrapped.py  level5_generated.py  lexer.duan  lexer_core.duan  lexer_full.py  lexer_handwritten.py  lexer_inline.duan  lexer_mini.duan  lexer_out.py  lexer_self.duan  lexer_self.py  lexer_tiny.duan  lexer_v2.duan  main.duan  module_preprocessor.py  parser.duan  parser_minimal.duan  parser_test.py  parser_v1.duan  run_compiler.py  test_bootstrap_pipeline.py  test_compiler.py  test_level4_full.py  test_level5_exception.py  (+8 more)
cli/: __init__.py  duan.py  duan_unified.py  duanc.py
debug-adapter/: config_generator.py  duan_debug_adapter.py
docs/: API_REFERENCE.md  API参考.md  BOOTSTRAP_STRATEGY.md  DEVELOPMENT_GUIDE.md  FILE_IO_REPORT.md  FINAL_SUMMARY.md  HM全局类型推断系统.md  LANGUAGE_EXTENSIONS.md  MODULE_RESOLVER_REPORT.md  MODULE_SYSTEM_VERIFICATION.md  OPTIMIZATION_ANALYSIS.md  PERFORMANCE_OPTIMIZATION.md  PROGRESS_REPORT.md  REPL_DESIGN.md  REPL_IMPLEMENTATION_PLAN.md  USER_MANUAL.md  architecture.md  class_system_design.md  duan_lite_spec.md  examples.md  file_io_design.md  getting-started.md  index.md  interface-design.md  interface-plan.md  level4_spec.md  level5_spec.md  llvm_backend_design.md  module_system_design.md  stdlib.md  syntax-enhancement-design.md  syntax-enhancement-iter2-plan.md  syntax-enhancement-plan.md  syntax.md  tools.md  使用指南.md  可空类型unwrap系统.md  教程.md  模块系统与包管理.md  段言语言文档与教程.md  (+4 more)
examples/: README.md  advanced.duan  basic.duan  calculator.duan  class_access_control.duan  class_complete.duan  class_example.duan  class_static.duan  hanoi.duan  hello.duan  module_demo.duan  student_management.duan  test_bubble.duan  test_fib.duan  test_fib_src.duan  test_hello_src.duan  test_para.duan  test_turing.duan
lsp/: duan_lsp.py  duan_lsp_server.duan  duan_lsp_server.py  lsp_protocol.duan
project/: README.md  记账.duan
scripts/: generate_parser.py  (+3 more)
(+328 files in other folders)
