[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "duan-lang"
version = "0.2.0"
description = "段言（Duan）编程语言 - 中文编程语言解释器"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Duan Language Contributors"},
]
keywords = ["chinese", "programming-language", "cnlang", "中文编程"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Interpreters",
    "Natural Language :: Chinese (Simplified)",
]

dependencies = [
    "antlr4-python3-runtime==4.13.2",
]

[project.urls]
Homepage = "https://github.com/duan-lang/duan"
Repository = "https://github.com/duan-lang/duan"

[project.scripts]
duan = "antlrparser.cli:main"

[tool.setuptools.packages.find]
include = ["antlrparser", "antlrparser.*"]
exclude = ["antlrparser.test*", "antlrparser.self_hosted*", "antlrparser.duan_parser_new*", "antlrparser.duan_parser2*"]

[tool.setuptools.package-data]
antlrparser = ["modules/*.duan"]