[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duan"
version = "1.6.1"
description = "段言（Duan）— 中文自然语言编程语言"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Duan Contributors"},
]
keywords = ["programming-language", "chinese", "nlp", "compiler", "hm-inference", "null-safety", "module-system"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Education",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "autopep8>=2.0.0",
]
llvm = [
    # LLVM bindings (requires manual LLVM installation)
]
repl = [
    "prompt-toolkit>=3.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/skywalk163/duan"
Source = "https://github.com/skywalk163/duan"
BugTracker = "https://github.com/skywalk163/duan/issues"
Documentation = "https://github.com/skywalk163/duan/tree/main/docs"

[project.scripts]
duan = "cli.duan:main"
duanc = "cli.duanc:main"

[tool.setuptools.packages.find]
include = ["src*", "cli*", "stdlib*", "antlrparser*"]

[tool.setuptools.package-data]
"*" = ["*.duan"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "_test_*.py"]
addopts = "-v --tb=short --ignore=tests/archive"
norecursedirs = ["archive", "__pycache__"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "E501"]
exclude = [
    "__pycache__",
    "antlrparser/duan_parser/*.py",
    "antlrparser/*.py",
]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true